[package]
authors = ["Malte Brieske <9287988+mbrieske@users.noreply.github.com>"]
name = "canopen-async"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-sync = { version = "0.7.0", optional = true }
embassy-time = "0.4.0"
embedded-can = { version = "0.4.1", git = "https://github.com/swobbee-dev/embedded-hal", branch = "feature/embedded-can-async", package = "embedded-can" }

[features]
defmt = []
embassy = ["embassy-sync"]
