[package]
authors = ["Malte Brieske <9287988+mbrieske@users.noreply.github.com>"]
name = "canopen-async"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
crc = "3.3.0"
defmt = { version = "1.0.1", optional = true }
embassy-sync = "0.8.0"
embassy-time = "0.5.1"
embedded-can = { version = "0.4.1", git = "https://github.com/swobbee-dev/embedded-hal", branch = "feature/embedded-can-async", package = "embedded-can" }

[features]
default = ["defmt"]
defmt = ["dep:defmt"]
